user-skel/ansible_collections/ace_box/ace_box/roles/app-unguard/files/repos/unguard/k8s-manifests/aws/ingress.yaml
# Copyright 2024 Dynatrace LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: unguard-ingress
  labels:
    app.kubernetes.io/name: ingress
    app.kubernetes.io/part-of: unguard
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internal
spec:
  rules:
    - http:
        paths:
          # the ordering of these endpoints is important because
          # the AWS ALB will redirect the first route that matches
          - path: /healthz
            pathType: Prefix
            backend:
              service:
                name: unguard-envoy-proxy
                port:
                  number: 8081
          - path: /
            pathType: Prefix
            backend:
              service:
                name: unguard-envoy-proxy
                port:
                  number: 8080
